--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,9 +1,10 @@
 <nav class="p-4 text-white bg-orange-500">
   <div class="container flex items-center justify-between mx-auto">
-    <a routerLink="/" class="text-lg font-bold">DOMINISTORE</a>
+    <a routerLink="/" class="text-lg font-bold">Invitaciones Happy Checho</a>
     <div class="flex items-center">
-      <a routerLink="/products" class="mr-6">Products</a>
-      <div class="relative" (mouseenter)="showCart.set(true)" (mouseleave)="showCart.set(false)">
+      <!-- <a routerLink="/products" class="mr-6">Productos</a> -->
+      <a routerLink="/categories">Categorías</a>      
+      <!-- <div class="relative" (mouseenter)="showCart.set(true)" (mouseleave)="showCart.set(false)">
         <a routerLink="/checkout">
           <svg fill="none" height="25" viewBox="0 0 15 15" width="25" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -35,7 +36,7 @@
           </div>
         </div>
         }
-      </div>
+      </div> -->
     </div>
   </div>
 </nav>
