se implementa orders y previews

--- a/src/app/features/models/models.component.html
+++ b/src/app/features/models/models.component.html
@@ -22,7 +22,7 @@
                 <span class="text-2xl font-bold text-orange-500 ">{{model?.price | currency}}</span>
                 <button [routerLink]="['/orders', model?.id]"
                   class="px-2 py-1 ml-auto text-white bg-orange-500 rounded hover:bg-orange-700">
-                  Crear Invitación
+                  Realizar Invitación
                 </button>
               </div>
             </div>
