--- a/src/app/features/sales/sales.component.html
+++ b/src/app/features/sales/sales.component.html
@@ -2,7 +2,7 @@
     <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-wrap mx-auto lg:w-4/5">
 
-            {{production()?.state_payment}}
+            <!-- {{production()?.state_payment}} -->
 
         </div>
     </div>
