--- a/src/app/features/products/card/card.component.html
+++ b/src/app/features/products/card/card.component.html
@@ -13,12 +13,12 @@
       </a>
     </h2>
     <div class="flex items-center justify-between mt-1">
-      <p class="text-2xl font-bold text-orange-500">
+      <!-- <p class="text-2xl font-bold text-orange-500">
         {{ product().price | currency }}
-      </p>
+      </p> -->
       <button [routerLink]="['/models', product().id]"
         class="px-2 py-1 text-white bg-orange-500 rounded hover:bg-orange-700">
-        Escoger Modelo
+        Escoger Modelo de Invitación
       </button>
     </div>
   </div>
