--- a/src/app/features/sales/sales.component.html
+++ b/src/app/features/sales/sales.component.html
@@ -1,25 +1,62 @@
 <section class="overflow-hidden text-gray-600 body-font">
-    <div class="container px-5 py-24 mx-auto">
-        <div class="flex flex-wrap mx-auto lg:w-4/5">
+    <div class="container px-5 py-5 mx-auto">
 
-            <!-- {{production()?.state_payment}} -->
+        @if (order()?.order_state=="edited") {
 
+        <div class="flex justify-center">
+            <div class="animate-spin rounded-full h-32 w-32 border-t-4 border-b-4 border-orange-500"></div>
         </div>
-    </div>
-</section>
 
+        <br>
 
-<section class="overflow-hidden text-gray-600 body-font">
-    <div class="container px-5 py-24 mx-auto">
-        <div class="flex flex-wrap mx-auto lg:w-4/5">
-            <video width="560" height="315" controls>
-                <!-- <source [src]="production()?.path | safe" type="video/mp4"> -->
-                <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
-                    type="video/mp4">
-                <!-- <source src="{{product()?.video}}" type="video/webm">           -->
-            </video>
-
+        <div class="flex justify-center">
+            <span
+                class="w-24 bg-orange-500 text-white align-middle inline-block whitespace-nowrap rounded-[0.27rem] bg-primary-100 px-[0.65em] pb-[0.45em] pt-[0.35em] text-center align-baseline text-[0.75em] font-bold leading-none text-primary-700 dark:bg-slate-900 dark:text-primary-500">
+                <!-- {{order_state}} -->
+                Creando...
+            </span>
         </div>
+        <div class="flex justify-center">
+            <p class="mt-2 mb-5 leading-relaxed ">Espere unos minutos mientras el proceso de creación del video termine.
+            </p>
+        </div>
+
+        }
+
+        @if (order()?.order_state=="produced") {
+
+        <section class="overflow-hidden text-gray-600 body-font">
+            <div class="container px-5 py-5 mx-auto">
+                <div class="flex flex-wrap mx-auto lg:w-5/5">
+                    <video width="560" height="315" controls>
+                        <source [src]="order()?.video_rendered_url | safe" type="video/mp4">
+                    </video>
+                    <div class="w-full mt-6 lg:w-1/2 lg:pl-10 lg:py-6 lg:mt-0">
+                        <h2 class="text-sm tracking-widest text-gray-500 title-font">Ahora es tuyo</h2>
+                        <h1 class="mb-1 text-3xl font-medium text-gray-900 title-font">Video Invitación Super Exclusivo!
+                        </h1>
+                        <p class="mt-6 mb-5 leading-relaxed ">
+                            · Se te envío un link de acceso a tu correo electrónico
+                            <br>
+                            · Tienes 3 Correcciones incluidas
+                            <br>
+                            · Tienes 7 Días de acceso para corregir tu video invitación
+                        </p>
+                        <div class="flex">
+                            <span class="text-2xl text-gray-900 title-font">Descargalo ahora!</span>
+                            <!-- <span class="text-2xl font-bold text-orange-500">&nbsp;{{order()?.model_price | currency}}</span> -->
+                            <!-- <button [routerLink]="['/edits', order()?.id]" -->
+                            <button [routerLink]="['/edits', orderId()]"
+                                class="px-2 py-1 ml-auto text-white bg-orange-500 rounded hover:bg-orange-700">
+                                Volver a Editar Invitación
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        }
 
     </div>
 </section>
