se implementa stripe y se mejora validación de formulario reactivo

--- a/src/app/features/orders/orders.component.html
+++ b/src/app/features/orders/orders.component.html
@@ -1,29 +1,130 @@
 <section class="overflow-hidden text-gray-600 body-font">
     <div class="container px-5 py-5 mx-auto">
-        <!-- <div class="flex flex-wrap mx-auto lg:w-5/5"> -->
 
-        <form [formGroup]="myForm" (ngSubmit)="createOrder()">
-            <div class="flex flex-wrap -mx-3 mb-6">
-                <div class="w-full px-3 mb-6 md:mb-0">
-                    <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
-                        for="grid-first-first_message">
-                        Message 1
-                    </label>
-                    <input
-                        class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                        id="grid-first-first_message" type="text" formControlName="first_message">
+        <!-- <div class="form-group">
+            <label>Full Name</label>
+            <input type="text" formControlName="fullname" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f['fullname'].errors }" />
+            @if (submitted && f['fullname'].errors) {
+            <div class="invalid-feedback">
+                @if (f['fullname'].errors['required']) {
+                <div>Fullname is required</div>
+                }
+            </div>
+            }
+        </div> -->
+
+        <!-- <div class="col-span-full">
+            <label for="cover-photo" class="block text-sm font-medium leading-6 text-gray-900">Cover photo</label>
+            <div class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10">
+                <div class="text-center">
+                    <svg class="mx-auto h-12 w-12 text-gray-300" viewBox="0 0 24 24" fill="currentColor"
+                        aria-hidden="true">
+                        <path fill-rule="evenodd"
+                            d="M1.5 6a2.25 2.25 0 012.25-2.25h16.5A2.25 2.25 0 0122.5 6v12a2.25 2.25 0 01-2.25 2.25H3.75A2.25 2.25 0 011.5 18V6zM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0021 18v-1.94l-2.69-2.689a1.5 1.5 0 00-2.12 0l-.88.879.97.97a.75.75 0 11-1.06 1.06l-5.16-5.159a1.5 1.5 0 00-2.12 0L3 16.061zm10.125-7.81a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0z"
+                            clip-rule="evenodd" />
+                    </svg>
+                    <div class="mt-4 flex text-sm leading-6 text-gray-600">
+                        <label for="file-upload"
+                            class="relative cursor-pointer rounded-md bg-white font-semibold text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-600 focus-within:ring-offset-2 hover:text-indigo-500">
+                            <span>Upload a file</span>
+                            <input id="file-upload" name="file-upload" type="file" class="sr-only">
+                        </label>
+                        <p class="pl-1">or drag and drop</p>
+                    </div>
+                    <p class="text-xs leading-5 text-gray-600">PNG, JPG, GIF up to 10MB</p>
                 </div>
             </div>
+        </div> -->
+
+        @if (model().id != "") {
+
+        <form [formGroup]="myForm" (ngSubmit)="createOrder()">
+
+            @if ((model().total_messages || 0) >= 1) {
+
+            <div class="grid grid-cols-8 gap-4">
+
+                <div class="col-span-3">
+                    <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
+                        for="grid-first-first_message">
+                        Mensaje de Bienvenida
+                    </label>
+                    <label class="block tracking-wide text-gray-700 text-xs mb-2" for="grid-first-first_message">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </label>
+                </div>
+                <div class="col-span-5 flex flex-wrap -mx-3 mb-6">
+                    <div class="w-full px-3 mb-6 md:mb-0">
+                        <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
+                            for="grid-first-first_message">
+                            Mensaje Nro 1
+                        </label>
+                        <!-- [ngClass]="{ 'is-invalid': submitted && f['fullname'].errors }" -->
+                        <input
+                            class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+                            id="grid-first-first_message" type="text" formControlName="first_message"
+                            [ngClass]="(formControlIsInitial('first_message') || formControlIsValid('first_message')) ? 'border-gray-400' : 'border-red-500'">
+                        <!-- <input
+                        class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+                        id="grid-first-first_message" type="text" formControlName="first_message"
+                        [ngClass]="{
+                            'border-red-500': submitted && f['first_message'].errors,
+                            'border-green-500': submitted && !f['first_message'].errors
+                        }"
+                        > -->
+                        <!-- @if (submitted && f['first_message'].errors) {           -->
+                        @if (isValid('first_message', 'required')) {
+                        <div class="text-xs text-red-500">
+                            <!-- @if (f['first_message'].errors['required']) { -->
+                            <div>El Mensaje Nro 1 es obligatorio</div>
+                            <!-- } -->
+                        </div>
+                        }
+
+                        @if (isValid('first_message', 'maxlength')) {
+                        <div class="text-xs text-red-500">
+                            <!-- @if (f['first_message'].errors['required']) { -->
+                            <div>El Mensaje Nro 1 debe tener máximo 20 caracteres</div>
+                            <!-- } -->
+                        </div>
+                        }
+
+                        <!-- <p *ngIf="validarCampo('monto_gasto', 'maxlength')">Ingrese un monto de gasto
+                        correcto.</p> -->
+
+                    </div>
+                </div>
+
+            </div>
+            }
+            @if ((model().total_messages || 0) >= 2) {
             <div class="flex flex-wrap -mx-3 mb-6">
                 <div class="w-full px-3 mb-6 md:mb-0">
                     <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-second_message">
-                        Message 2
+                        Mensaje Nro 2
                     </label>
                     <input
                         class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
                         id="grid-second_message" type="text" formControlName="second_message">
                 </div>
             </div>
+            }
+            @if ((model().total_messages || 0) >= 3) {
+            <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full px-3 mb-6 md:mb-0">
+                    <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-third_message">
+                        Mensaje Nro 3
+                    </label>
+                    <input
+                        class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+                        id="grid-third_message" type="text" formControlName="third_message">
+                </div>
+            </div>
+            }
+
             <!-- <div class="flex flex-wrap -mx-3 mb-6">
                     <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
                         <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
@@ -47,14 +148,39 @@
                     </div>
                 </div> -->
 
-            <div class="flex flex-wrap -mx-3 mb-6">
+            @if ((model().total_images ?? 0) >= 1) {
+            <!-- <div class="flex flex-wrap -mx-3 mb-6">
                 <div class="w-full px-3 mb-6 md:mb-0">
                     <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-image">
                         Image 1
                     </label>
                     <input type="file" (change)="selectFirstFile($event)" />
                 </div>
+            </div> -->
+            <div class="col-span-full">
+                <label for="cover-photo" class="block text-sm font-medium leading-6 text-gray-900">Imagen Nro 1</label>
+                <div class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10">
+                    <div class="text-center">
+                        <svg class="mx-auto h-12 w-12 text-gray-300" viewBox="0 0 24 24" fill="currentColor"
+                            aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                d="M1.5 6a2.25 2.25 0 012.25-2.25h16.5A2.25 2.25 0 0122.5 6v12a2.25 2.25 0 01-2.25 2.25H3.75A2.25 2.25 0 011.5 18V6zM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0021 18v-1.94l-2.69-2.689a1.5 1.5 0 00-2.12 0l-.88.879.97.97a.75.75 0 11-1.06 1.06l-5.16-5.159a1.5 1.5 0 00-2.12 0L3 16.061zm10.125-7.81a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0z"
+                                clip-rule="evenodd" />
+                        </svg>
+                        <div class="mt-4 flex text-sm leading-6 text-gray-600">
+                            <label for="file-upload"
+                                class="relative cursor-pointer rounded-md bg-white font-semibold text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-600 focus-within:ring-offset-2 hover:text-indigo-500">
+                                <span>Cargar un archivo</span>
+                                <input id="file-upload" name="file-upload" type="file" class="sr-only"
+                                    (change)="selectFirstFile($event)">
+                            </label>
+                            <p class="pl-1">o arrastrar y soltar</p>
+                        </div>
+                        <p class="text-xs leading-5 text-gray-600">PNG, JPG, GIF hasta 2MB</p>
+                    </div>
+                </div>
             </div>
+            }
 
             <div class="md:flex md:items-center">
                 <!-- <div class="md:w-1/3"></div> -->
@@ -71,17 +197,7 @@
 
         </form>
 
-        <!-- <br> -->
+        }
 
-        <!-- <div class="radial-progress" style="--value:70; --size:12rem; --thickness: 2px;" role="progressbar">70%</div>
-        <div class="radial-progress" style="--value:70; --size:12rem; --thickness: 2rem;" role="progressbar">70%</div> -->
-
-
-     
-
-        <!-- <button (click)="onProceedToPay()"
-                class="flex px-6 py-2 ml-auto text-white bg-orange-500 border-0 rounded focus:outline-none hover:bg-orange-600">Pay</button> -->
-
-        <!-- </div> -->
     </div>
 </section>
