--- a/src/app/shared/components/file-upload/file-upload.component.html
+++ b/src/app/shared/components/file-upload/file-upload.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
     <div class="col-8">
       <label class="btn btn-default p-0">
         <input type="file" (change)="selectFile($event)" />
@@ -25,4 +25,4 @@
       </li>
       }
     </ul>
-  </div>
+  </div> -->
