--- a/src/app/features/orders/orders.component.html
+++ b/src/app/features/orders/orders.component.html
@@ -41,10 +41,9 @@
 
         <form [formGroup]="myForm" (ngSubmit)="createOrder()">
 
-            @if ((model().total_messages || 0) >= 1) {
-
             <div class="grid grid-cols-8 gap-4">
 
+                @if ((model().total_messages || 0) >= 1) {
                 <div class="col-span-3">
                     <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
                         for="grid-first-first_message">
@@ -56,8 +55,8 @@
                         laboris nisi ut aliquip ex ea commodo consequat.
                     </label>
                 </div>
-                <div class="col-span-5 flex flex-wrap -mx-3 mb-6">
-                    <div class="w-full px-3 mb-6 md:mb-0">
+                <div class="col-span-5 flex flex-wrap -mx-3">
+                    <div class="w-full px-3 md:mb-0">
                         <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
                             for="grid-first-first_message">
                             Mensaje Nro 1
@@ -97,35 +96,35 @@
 
                     </div>
                 </div>
-
-            </div>
-            }
-            @if ((model().total_messages || 0) >= 2) {
-            <div class="flex flex-wrap -mx-3 mb-6">
-                <div class="w-full px-3 mb-6 md:mb-0">
-                    <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-second_message">
-                        Mensaje Nro 2
-                    </label>
-                    <input
-                        class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                        id="grid-second_message" type="text" formControlName="second_message">
+                }
+                @if ((model().total_messages || 0) >= 2) {
+                <div class="flex flex-wrap -mx-3 mb-6">
+                    <div class="w-full px-3 mb-6 md:mb-0">
+                        <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
+                            for="grid-second_message">
+                            Mensaje Nro 2
+                        </label>
+                        <input
+                            class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+                            id="grid-second_message" type="text" formControlName="second_message">
+                    </div>
                 </div>
-            </div>
-            }
-            @if ((model().total_messages || 0) >= 3) {
-            <div class="flex flex-wrap -mx-3 mb-6">
-                <div class="w-full px-3 mb-6 md:mb-0">
-                    <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-third_message">
-                        Mensaje Nro 3
-                    </label>
-                    <input
-                        class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                        id="grid-third_message" type="text" formControlName="third_message">
+                }
+                @if ((model().total_messages || 0) >= 3) {
+                <div class="flex flex-wrap -mx-3 mb-6">
+                    <div class="w-full px-3 mb-6 md:mb-0">
+                        <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
+                            for="grid-third_message">
+                            Mensaje Nro 3
+                        </label>
+                        <input
+                            class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+                            id="grid-third_message" type="text" formControlName="third_message">
+                    </div>
                 </div>
-            </div>
-            }
+                }
 
-            <!-- <div class="flex flex-wrap -mx-3 mb-6">
+                <!-- <div class="flex flex-wrap -mx-3 mb-6">
                     <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
                         <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
                             for="grid-first-name">
@@ -148,8 +147,8 @@
                     </div>
                 </div> -->
 
-            @if ((model().total_images ?? 0) >= 1) {
-            <!-- <div class="flex flex-wrap -mx-3 mb-6">
+                @if ((model().total_images ?? 0) >= 1) {
+                <!-- <div class="flex flex-wrap -mx-3 mb-6">
                 <div class="w-full px-3 mb-6 md:mb-0">
                     <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-image">
                         Image 1
@@ -157,30 +156,47 @@
                     <input type="file" (change)="selectFirstFile($event)" />
                 </div>
             </div> -->
-            <div class="col-span-full">
-                <label for="cover-photo" class="block text-sm font-medium leading-6 text-gray-900">Imagen Nro 1</label>
-                <div class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10">
-                    <div class="text-center">
-                        <svg class="mx-auto h-12 w-12 text-gray-300" viewBox="0 0 24 24" fill="currentColor"
-                            aria-hidden="true">
-                            <path fill-rule="evenodd"
-                                d="M1.5 6a2.25 2.25 0 012.25-2.25h16.5A2.25 2.25 0 0122.5 6v12a2.25 2.25 0 01-2.25 2.25H3.75A2.25 2.25 0 011.5 18V6zM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0021 18v-1.94l-2.69-2.689a1.5 1.5 0 00-2.12 0l-.88.879.97.97a.75.75 0 11-1.06 1.06l-5.16-5.159a1.5 1.5 0 00-2.12 0L3 16.061zm10.125-7.81a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0z"
-                                clip-rule="evenodd" />
-                        </svg>
-                        <div class="mt-4 flex text-sm leading-6 text-gray-600">
-                            <label for="file-upload"
-                                class="relative cursor-pointer rounded-md bg-white font-semibold text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-600 focus-within:ring-offset-2 hover:text-indigo-500">
-                                <span>Cargar un archivo</span>
-                                <input id="file-upload" name="file-upload" type="file" class="sr-only"
-                                    (change)="selectFirstFile($event)">
-                            </label>
-                            <p class="pl-1">o arrastrar y soltar</p>
+                <div class="col-span-full">
+                    <label for="cover-photo" class="block text-sm font-medium leading-6 text-gray-900">Imagen Nro
+                        1</label>
+                    <div class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10">
+                        <div class="text-center">
+                            <svg class="mx-auto h-12 w-12 text-gray-300" viewBox="0 0 24 24" fill="currentColor"
+                                aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M1.5 6a2.25 2.25 0 012.25-2.25h16.5A2.25 2.25 0 0122.5 6v12a2.25 2.25 0 01-2.25 2.25H3.75A2.25 2.25 0 011.5 18V6zM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0021 18v-1.94l-2.69-2.689a1.5 1.5 0 00-2.12 0l-.88.879.97.97a.75.75 0 11-1.06 1.06l-5.16-5.159a1.5 1.5 0 00-2.12 0L3 16.061zm10.125-7.81a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            <div class="mt-4 flex text-sm leading-6 text-gray-600">
+                                <label for="file-upload"
+                                    class="relative cursor-pointer rounded-md bg-white font-semibold text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-600 focus-within:ring-offset-2 hover:text-indigo-500">
+                                    <span>Cargar un archivo</span>
+                                    <input id="file-upload" name="file-upload" type="file" class="sr-only"
+                                        (change)="selectFirstFile($event)">
+                                </label>
+                                <p class="pl-1">o arrastrar y soltar</p>
+                            </div>
+                            <p class="text-xs leading-5 text-gray-600">PNG, JPG, GIF hasta 2MB</p>
                         </div>
-                        <p class="text-xs leading-5 text-gray-600">PNG, JPG, GIF hasta 2MB</p>
                     </div>
                 </div>
+                }
+
+                <div class="col-span-3 mb-5">
+                    <re-captcha (resolved)="checkCaptcha($event)" formControlName="recaptchaReactive"></re-captcha>
+                    @if (isValid('recaptchaReactive', 'required')) {
+                    <div class="text-xs text-red-500">
+                        <!-- @if (f['first_message'].errors['required']) { -->
+                        <div>No soy un robot es obligatorio</div>
+                        <!-- } -->
+                    </div>
+                    }
+                </div>
+                <div class="col-span-5">
+
+                </div>
+
             </div>
-            }
 
             <div class="md:flex md:items-center">
                 <!-- <div class="md:w-1/3"></div> -->
