--- a/src/app/features/previews/previews.component.html
+++ b/src/app/features/previews/previews.component.html
@@ -49,7 +49,7 @@
                 <div class="container px-5 py-5 mx-auto">
                   <div class="flex flex-wrap mx-auto lg:w-5/5">
                     <video width="560" height="315" controls>
-                        <source [src]="order()?.video_rendered_url | safe" type="video/mp4">
+                        <source [src]="order()?.video_rendered_url_with_watermark | safe" type="video/mp4">
                     </video>
                     <div class="w-full mt-6 lg:w-1/2 lg:pl-10 lg:py-6 lg:mt-0">
                       <h2 class="text-sm tracking-widest text-gray-500 title-font">Estás a un paso de adquir tú</h2>
