--- a/src/app/features/orders/orders.component.html
+++ b/src/app/features/orders/orders.component.html
@@ -45,11 +45,10 @@
 
                 @if ((model().total_messages || 0) >= 1) {
                 <div class="col-span-3">
-                    <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
-                        for="grid-first-first_message">
+                    <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2">
                         Mensaje de Bienvenida
                     </label>
-                    <label class="block tracking-wide text-gray-700 text-xs mb-2" for="grid-first-first_message">
+                    <label class="block tracking-wide text-gray-700 text-xs mb-2">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat.
@@ -57,14 +56,13 @@
                 </div>
                 <div class="col-span-5 flex flex-wrap -mx-3">
                     <div class="w-full px-3 md:mb-0">
-                        <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
-                            for="grid-first-first_message">
+                        <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2">
                             Mensaje Nro 1
                         </label>
                         <!-- [ngClass]="{ 'is-invalid': submitted && f['fullname'].errors }" -->
                         <input
                             class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                            id="grid-first-first_message" type="text" formControlName="first_message"
+                            type="text" formControlName="first_message"
                             [ngClass]="(formControlIsInitial('first_message') || formControlIsValid('first_message')) ? 'border-gray-400' : 'border-red-500'">
                         <!-- <input
                         class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
@@ -98,28 +96,107 @@
                 </div>
                 }
                 @if ((model().total_messages || 0) >= 2) {
-                <div class="flex flex-wrap -mx-3 mb-6">
-                    <div class="w-full px-3 mb-6 md:mb-0">
-                        <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
-                            for="grid-second_message">
+                <div class="col-span-3">
+                    <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2">
+                        Mensaje 2
+                    </label>
+                    <label class="block tracking-wide text-gray-700 text-xs mb-2">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </label>
+                </div>
+                <div class="col-span-5 flex flex-wrap -mx-3">
+                    <div class="w-full px-3 md:mb-0">
+                        <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2">
                             Mensaje Nro 2
                         </label>
+                        <!-- [ngClass]="{ 'is-invalid': submitted && f['fullname'].errors }" -->
                         <input
                             class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                            id="grid-second_message" type="text" formControlName="second_message">
+                            type="text" formControlName="second_message"
+                            [ngClass]="(formControlIsInitial('second_message') || formControlIsValid('second_message')) ? 'border-gray-400' : 'border-red-500'">
+                        <!-- <input
+                            class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+                            id="grid-first-first_message" type="text" formControlName="first_message"
+                            [ngClass]="{
+                                'border-red-500': submitted && f['first_message'].errors,
+                                'border-green-500': submitted && !f['first_message'].errors
+                            }"
+                            > -->
+                        <!-- @if (submitted && f['first_message'].errors) {           -->
+                        @if (isValid('second_message', 'required')) {
+                        <div class="text-xs text-red-500">
+                            <!-- @if (f['first_message'].errors['required']) { -->
+                            <div>El Mensaje Nro 2 es obligatorio</div>
+                            <!-- } -->
+                        </div>
+                        }
+
+                        @if (isValid('second_message', 'maxlength')) {
+                        <div class="text-xs text-red-500">
+                            <!-- @if (f['first_message'].errors['required']) { -->
+                            <div>El Mensaje Nro 2 debe tener máximo 20 caracteres</div>
+                            <!-- } -->
+                        </div>
+                        }
+
+                        <!-- <p *ngIf="validarCampo('monto_gasto', 'maxlength')">Ingrese un monto de gasto
+                            correcto.</p> -->
+
                     </div>
                 </div>
                 }
+
                 @if ((model().total_messages || 0) >= 3) {
-                <div class="flex flex-wrap -mx-3 mb-6">
-                    <div class="w-full px-3 mb-6 md:mb-0">
-                        <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
-                            for="grid-third_message">
+                <div class="col-span-3">
+                    <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2">
+                        Mensaje de Bienvenida
+                    </label>
+                    <label class="block tracking-wide text-gray-700 text-xs mb-2">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </label>
+                </div>
+                <div class="col-span-5 flex flex-wrap -mx-3">
+                    <div class="w-full px-3 md:mb-0">
+                        <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2">
                             Mensaje Nro 3
                         </label>
+                        <!-- [ngClass]="{ 'is-invalid': submitted && f['fullname'].errors }" -->
                         <input
                             class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                            id="grid-third_message" type="text" formControlName="third_message">
+                            type="text" formControlName="third_message"
+                            [ngClass]="(formControlIsInitial('third_message') || formControlIsValid('third_message')) ? 'border-gray-400' : 'border-red-500'">
+                        <!-- <input
+                                class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+                                id="grid-first-first_message" type="text" formControlName="first_message"
+                                [ngClass]="{
+                                    'border-red-500': submitted && f['first_message'].errors,
+                                    'border-green-500': submitted && !f['first_message'].errors
+                                }"
+                                > -->
+                        <!-- @if (submitted && f['first_message'].errors) {           -->
+                        @if (isValid('third_message', 'required')) {
+                        <div class="text-xs text-red-500">
+                            <!-- @if (f['first_message'].errors['required']) { -->
+                            <div>El Mensaje Nro 3 es obligatorio</div>
+                            <!-- } -->
+                        </div>
+                        }
+
+                        @if (isValid('third_message', 'maxlength')) {
+                        <div class="text-xs text-red-500">
+                            <!-- @if (f['first_message'].errors['required']) { -->
+                            <div>El Mensaje Nro 3 debe tener máximo 20 caracteres</div>
+                            <!-- } -->
+                        </div>
+                        }
+
+                        <!-- <p *ngIf="validarCampo('monto_gasto', 'maxlength')">Ingrese un monto de gasto
+                                correcto.</p> -->
+
                     </div>
                 </div>
                 }
@@ -156,10 +233,28 @@
                     <input type="file" (change)="selectFirstFile($event)" />
                 </div>
             </div> -->
-                <div class="col-span-full">
-                    <label for="cover-photo" class="block text-sm font-medium leading-6 text-gray-900">Imagen Nro
-                        1</label>
-                    <div class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10">
+                <div class="col-span-3">
+                    <label class="block tracking-wide text-gray-700 text-xs font-bold mb-2">
+                        Imagen Nro 1
+                    </label>
+                    <label class="block tracking-wide text-gray-700 text-xs mb-2">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </label>
+                </div>
+                <div class="col-span-5">
+                    <label for="cover-photo" class="block text-sm font-medium leading-6 text-gray-900">
+                        Imagen Nro 1</label>
+
+                    @if (preview==''){
+                    <div class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-400 px-6 py-10 drag-drop-area"
+                        [ngClass]="{
+                            'border-gray-400': (formControlIsInitial('first_image') || formControlIsValid('first_image')), 
+                            'border-red-500': !(formControlIsInitial('first_image') || formControlIsValid('first_image')),
+                            'bg-gray-200': cssisDragOver,
+                            'bg-white-500': !cssisDragOver,
+                        }" (drop)="onDrop($event)" (dragover)="onDragOver($event)" (dragleave)="onDragLeave($event)">
                         <div class="text-center">
                             <svg class="mx-auto h-12 w-12 text-gray-300" viewBox="0 0 24 24" fill="currentColor"
                                 aria-hidden="true">
@@ -170,8 +265,9 @@
                             <div class="mt-4 flex text-sm leading-6 text-gray-600">
                                 <label for="file-upload"
                                     class="relative cursor-pointer rounded-md bg-white font-semibold text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-600 focus-within:ring-offset-2 hover:text-indigo-500">
-                                    <span>Cargar un archivo</span>
+                                    <span>Cargar una imagen</span>
                                     <input id="file-upload" name="file-upload" type="file" class="sr-only"
+                                        formControlName="first_image" accept="image/png, image/gif, image/jpeg"
                                         (change)="selectFirstFile($event)">
                                 </label>
                                 <p class="pl-1">o arrastrar y soltar</p>
@@ -179,10 +275,46 @@
                             <p class="text-xs leading-5 text-gray-600">PNG, JPG, GIF hasta 2MB</p>
                         </div>
                     </div>
+                    @if (isValid('first_image', 'required') && !messageType && !messageSize) {
+                    <div class="text-xs text-red-500">
+                        <!-- @if (f['first_message'].errors['required']) { -->
+                        <div>La Imagen Nro 1 es obligatorio</div>
+                        <!-- } -->
+                    </div>
+                    }
+                    @if (messageType) {
+                    <div class="text-xs text-red-500">
+                        <!-- @if (f['first_message'].errors['required']) { -->
+                        <div>La imagen debe ser en formato .png, .jpg, .jpeg o .gif</div>
+                        <!-- } -->
+                    </div>
+                    }
+                    @if (messageSize) {
+                    <div class="text-xs text-red-500">
+                        <!-- @if (f['first_message'].errors['required']) { -->
+                        <div>La imagen debe ser menor a 2MB</div>
+                        <!-- } -->
+                    </div>
+                    }
+                    }
+                    @else{
+                    <div>
+                        <img [src]="preview" class="preview" />
+                        <button type="submit"
+                            class="mt-1 px-2 py-1 ml-auto text-xs text-white bg-orange-500 rounded hover:bg-orange-700"
+                            (click)="changeFirstImage()">
+                            Cambiar Imagen
+                        </button>
+                    </div>
+                    }
+
                 </div>
                 }
 
                 <div class="col-span-3 mb-5">
+
+                </div>
+                <div class="col-span-5">
                     <re-captcha (resolved)="checkCaptcha($event)" formControlName="recaptchaReactive"></re-captcha>
                     @if (isValid('recaptchaReactive', 'required')) {
                     <div class="text-xs text-red-500">
@@ -192,15 +324,10 @@
                     </div>
                     }
                 </div>
-                <div class="col-span-5">
+                <div class="col-span-3 mb-5">
 
                 </div>
-
-            </div>
-
-            <div class="md:flex md:items-center">
-                <!-- <div class="md:w-1/3"></div> -->
-                <div class="md:w-1/3">
+                <div class="col-span-5">
                     <button type="submit"
                         class="px-2 py-1 ml-auto text-white bg-orange-500 rounded hover:bg-orange-700">
                         Crear Invitación
@@ -208,8 +335,14 @@
                 </div>
             </div>
 
-
-
+            <!-- <div class="md:flex md:items-center">                
+                <div class="md:w-1/3">
+                    <button type="submit"
+                        class="px-2 py-1 ml-auto text-white bg-orange-500 rounded hover:bg-orange-700">
+                        Crear Invitación
+                    </button>
+                </div>
+            </div> -->
 
         </form>
 
