--- a/src/app/features/orders/orders.component.html
+++ b/src/app/features/orders/orders.component.html
@@ -266,8 +266,8 @@
                                 <label for="file-upload"
                                     class="relative cursor-pointer rounded-md bg-white font-semibold text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-600 focus-within:ring-offset-2 hover:text-indigo-500">
                                     <span>Cargar una imagen</span>
-                                    <input id="file-upload" name="file-upload" type="file" class="sr-only"
-                                        formControlName="first_image" accept="image/png, image/gif, image/jpeg"
+                                    <input type="file" class="sr-only"
+                                        accept="image/png, image/gif, image/jpeg"
                                         (change)="selectFirstFile($event)">
                                 </label>
                                 <p class="pl-1">o arrastrar y soltar</p>
