se implementa pagina de 404 y cancel

--- a/src/app/features/orders/orders.component.html
+++ b/src/app/features/orders/orders.component.html
@@ -248,7 +248,7 @@
                         Imagen Nro 1</label>
 
                     @if (preview==''){
-                    <div class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-400 px-6 py-10 drag-drop-area"
+                    <div class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-400 px-6 py-10"
                         [ngClass]="{
                             'border-gray-400': (formControlIsInitial('first_image') || formControlIsValid('first_image')), 
                             'border-red-500': !(formControlIsInitial('first_image') || formControlIsValid('first_image')),
