se mejora atributos y envio de title e image a stripe

--- a/src/app/features/previews/previews.component.html
+++ b/src/app/features/previews/previews.component.html
@@ -22,7 +22,7 @@
     <section class="overflow-hidden text-gray-600 body-font">
       <div class="container px-5 py-5 mx-auto">
         <div class="flex flex-wrap mx-auto lg:w-5/5">
-          <video width="560" height="315" controls>
+          <video class="videocss" width="560" height="315" controls>
             <source [src]="order()?.video_rendered_url_with_watermark | safe" type="video/mp4">
           </video>
           <div class="w-full mt-6 lg:w-1/2 lg:pl-10 lg:py-6 lg:mt-0">
